add popup-sections to news.html

--- a/css/news.html
+++ b/css/news.html
@@ -64,15 +64,15 @@
             <section class="hot-news">
                 <div class="wrapper news">
                     <div class="cards cards-adapt">
-                        <div class="card">
+                        <div class="card" id="card1">
                             <img src="/img/card-image.jpg" alt="" />
                             <div class="card-container">
                                 <h3>
-                                    В ночь с 22 на 23 июня пройдет <br />“Ночь
+                                    В ночь с 19 на 20 мая пройдет <br />“Ночь
                                     кино Тарантино”
                                 </h3>
                                 <p>
-                                    В ночь с 22 по 23 июня в кинотеатре Golden
+                                    В ночь с 19 по 20 мая в кинотеатре Golden
                                     Eye пройдет пятая по счету ночь кино. В этот
                                     раз темой киномарафона стала фильмография
                                     Квентина Тарантино.<br /><br /><br />
@@ -80,9 +80,9 @@
 
                                 <div class="card-info">
                                     <div class="money">
-                                        <button class="read-more">
+                                        <a href="#popup1" class="read-more">
                                             Читать
-                                        </button>
+                                        </a>
                                     </div>
                                     <div class="info">
                                         <span title="hot"
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card" id="card2">
                             <img src="/img/card-imagecafe.jpg" alt="" />
                             <div class="card-container">
                                 <h3>
@@ -111,9 +111,9 @@
                                 </p>
                                 <div class="card-info">
                                     <div class="money">
-                                        <button class="read-more">
+                                        <a href="#popup2" class="read-more">
                                             Читать
-                                        </button>
+                                        </a>
                                     </div>
                                     <div class="info">
                                         <span title="hot"
@@ -126,12 +126,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card" id="card3">
                             <img src="/img/card-imagedrink.jpg" alt="" />
                             <div class="card-container">
                                 <h3>
                                     Куда пойти на выходных <br />
-                                    10-11 апреля?
+                                    22-23 мая?
                                 </h3>
                                 <p>
                                     Редакция сайта Kudapoidem собрала для вас
@@ -141,9 +141,9 @@
                                 </p>
                                 <div class="card-info">
                                     <div class="money">
-                                        <button class="read-more">
+                                        <a href="#popup3" class="read-more">
                                             Читать
-                                        </button>
+                                        </a>
                                     </div>
                                     <div class="info">
                                         <span title="hot"
@@ -156,12 +156,12 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card" id="card4">
                             <img src="/img/card-imageeaster.jpg" alt="" />
                             <div class="card-container">
                                 <h3>
-                                    Куличи, пряники и панеттоне. 12 заведений,
-                                    где можно купить пасхальную выпечку
+                                    Куличи, пряники и панеттоне. <br />4 лучших
+                                    места, где можно купить пасхальную выпечку
                                 </h3>
                                 <p>
                                     В журнале Kudapoidem — самая полная подборка
@@ -172,9 +172,9 @@
                                 </p>
                                 <div class="card-info">
                                     <div class="money">
-                                        <button class="read-more">
+                                        <a href="#popup4" class="read-more">
                                             Читать
-                                        </button>
+                                        </a>
                                     </div>
                                     <div class="info">
                                         <span title="hot"
@@ -187,7 +187,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card" id="card5">
                             <img src="/img/card-imagebarah.jpg" alt="" />
                             <div class="card-container">
                                 <h3>
@@ -203,9 +203,9 @@
                                 </p>
                                 <div class="card-info">
                                     <div class="money">
-                                        <button class="read-more">
+                                        <a href="#popup5" class="read-more">
                                             Читать
-                                        </button>
+                                        </a>
                                     </div>
                                     <div class="info">
                                         <span title="hot"
@@ -221,6 +221,213 @@
                     </div>
                 </div>
             </section>
+            <div id="popup1" class="popup">
+                <a href="#card1" class="popup__area"></a>
+                <div class="popup__body">
+                    <div class="popup__content">
+                        <a href="#card1" class="popup__close"
+                            ><i class="far fa-window-close"></i
+                        ></a>
+                        <div class="popup__title">
+                            В ночь с 22 на 23 мая пройдет <br />“Ночь кино
+                            Тарантино”
+                        </div>
+
+                        <div class="popup__text">
+                            <img src="/img/kventin-news.jpg" alt="" />
+                            <p>
+                                В ночь с 22 по 23 мая в кинотеатре Golden Eye
+                                пройдет пятая по счету ночь кино. В этот раз
+                                темой киномарафона стала фильмография Квентина
+                                Тарантино. <br /><br />
+                                Начнется показ, как многие могли догадаться, с
+                                фильма "Криминальное чтиво". Этот фильм стал
+                                визитной карточкой режиссера и именно в нем стал
+                                заметен его "фирменный стиль": сцены без
+                                хронологического порядка, главы, длинные диалоги
+                                и эффектные «разборки». <br /><br />Кроме того,
+                                невероятный вечер продолжит, пожалуй, самый
+                                эксцентричный фильм "Бесславные ублюдки",
+                                который был выпущен в 2009 году. А закончит
+                                вечер "Джанго освобожденный". Приятного
+                                просмотра!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="popup2" class="popup">
+                <a href="#card2" class="popup__area"></a>
+                <div class="popup__body">
+                    <div class="popup__content">
+                        <a href="#card2" class="popup__close"
+                            ><i class="far fa-window-close"></i
+                        ></a>
+                        <div class="popup__title">ECO-FRIENDLY CAFE</div>
+
+                        <div class="popup__text">
+                            <img src="/img/popup2-img.jpg" alt="" />
+                            <p>
+                                В городе Минск открылось новое кафе с названием
+                                "BOOM" концепции eco-friendly. Мы поговорили с
+                                основателями и узнали, почему сейчас популярна
+                                идея сохранения экологии. И вот, что мы узнали.
+                                <br /><br />
+                                Ингредиенты для блюд кафе заказывает уже в
+                                обработанном виде – так, морковь и картофель
+                                поступают на кухню уже очищенными, а мясо и рыба
+                                в виде филе. Поставщик перерабатывает отходы и
+                                делает из них суповые наборы и корм для
+                                животных. В минском кафе признаются, что за
+                                такие поставки приходится переплачивать, но зато
+                                в заведении точно уверены, что отходы пойдут на
+                                переработку. Также они продают вторичный жир из
+                                фритюра организации, которая возит его в Европу,
+                                где из него делают топливо для
+                                сельскохозяйственных тракторов. Также в
+                                заведении продают специальные клюквенные чипсы,
+                                которые приготовлены из жмыха, оставшегося от
+                                морса.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="popup3" class="popup">
+                <a href="#card3" class="popup__area"></a>
+                <div class="popup__body">
+                    <div class="popup__content">
+                        <a href="#card3" class="popup__close"
+                            ><i class="far fa-window-close"></i
+                        ></a>
+                        <div class="popup__title">
+                            Куда пойти на выходных 22-23 мая?
+                            <p>
+                                Редакция сайта Kudapoidem собрала для вас самые
+                                интересные мероприятия предстоящего уикенда. В
+                                том числе и бесплатные!
+                            </p>
+                        </div>
+
+                        <div class="popup__text">
+                            <img src="/img/popup3-img.jpg" alt="" />
+
+                            <p>
+                                <b
+                                    >1. Stand-up концерт Нурлана Сабурова в
+                                    Минске.</b
+                                ><br />
+                                Совершенно новый сольный standup концерт от
+                                резидента Standup Шоу на ТНТ. Юмор Нурлана
+                                Сабурова абсолютно без рамок, его выступления —
+                                это сложное сочетание больного воображения
+                                молодого казаха и насыщенных будней московского
+                                семьянина. <br />
+                                <b>2. Экофестиваль "Пастернак" (бесплатно) </b
+                                ><br />Проект экологического образа жизни берет
+                                свое начало в 2015 году, уделяется особое
+                                внимание темам веганства и экологии.
+                                Представление научных проектов по заданным темам
+                                и обсуждение, после чего ожидается музыкальное
+                                шоу в стиле рок.
+                                <b>
+                                    <br />
+                                    3. Самый большой музей Лего в мире!</b
+                                ><br />
+                                Выставка – музей моделей из кубиков Lego
+                                Las-Legas будет открыта 22-23 мая 2021 года в
+                                Минске по адресу: проспект Пушкина, 61а/2.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="popup4" class="popup">
+                <a href="#card4" class="popup__area"></a>
+                <div class="popup__body">
+                    <div class="popup__content">
+                        <a href="#card4" class="popup__close"
+                            ><i class="far fa-window-close"></i
+                        ></a>
+                        <div class="popup__title">
+                            Куличи, пряники и панеттоне. 4 лучших места, где
+                            можно купить восхитительную пасхальную выпечку
+                        </div>
+
+                        <div class="popup__text">
+                            <img src="/img/popup4-img.jpg" alt="" />
+
+                            <p>
+                                <b>1. Пасхальная ярмарка возле Дворца Спорта</b
+                                ><br />
+                                В Минске откроется пасхальная ярмарка, которая
+                                будет работать 29, 30 апреля, а также 1 мая
+                                возле Дворца спорта. На выбор покупателей —
+                                всевозможные виды ароматных куличей и не только:
+                                пирог с маком, каравай с изюмом, рулет с маковой
+                                начинкой и др.
+                                <br />
+                                <b
+                                    >2. Ежегодная выставка-ярмарка "Волшебный
+                                    кулич" </b
+                                ><br />В районе Комаровского рынка в г. Минск
+                                будет представлено более 200 лучших пасхальных
+                                работ.
+                                <b>
+                                    <br />
+                                    3. "Кулич-представление" от ресторана
+                                    "Родня"</b
+                                ><br />
+                                В этом году многим известный ресторан "Родня"
+                                проведет благотворительную акцию в поддержку
+                                детей-сирот дома-интерната №5 г.Минска. Всем
+                                желающим будет предложена возможность купить
+                                пасхальную выпечку, тем самым пожертвовав всю
+                                стоимость продукции детям-сиротам.
+                                <br />
+                                <b>4. Интернет-магазин "Буличка.by"</b><br />
+                                Недавно открывшийся интернет-магазин порадует
+                                нас хлебобулочными изделиями по классическим
+                                рецептам наших бабушек.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="popup5" class="popup">
+                <a href="#card5" class="popup__area"></a>
+                <div class="popup__body">
+                    <div class="popup__content">
+                        <a href="#card5" class="popup__close"
+                            ><i class="far fa-window-close"></i
+                        ></a>
+                        <div class="popup__title">
+                            «Большая городская барахолка» <br />пройдет в Минске
+                            24 и 25 апреля
+                        </div>
+
+                        <div class="popup__text">
+                            <img src="/img/popup5-img.jpg" alt="" />
+
+                            <p>
+                                В уикенд 24-25 апреля с 11:00 до 18:00 в
+                                помещении музея «Б/Уржуазные ценности» на
+                                Кальварийской, 18 будет работать «Большая
+                                городская барахолка», где вы сможете приобрести
+                                оригинальные и редкие вещи. Вход — 1 рубль. Что
+                                будет продаваться на Городской Барахолке?
+                                <br /><br />- винтажные и антикварные вещи
+                                <br />- мебель, предметы интерьера, картины
+                                <br />- много одежды и обуви <br />- украшения,
+                                аксессуары и парфюмерия <br />- посуда и
+                                хозяйственные мелочи - книги и грампластинки
+                                <br />- детские игрушки, одежда и обувь.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <div class="footer-block">
