add live search
add live search

--- a/css/people.html
+++ b/css/people.html
@@ -56,7 +56,11 @@
                     <div class="people-block">
                         <div class="buttons-search">
                             <form action="">
-                                <input type="text" placeholder="Поиск" />
+                                <input
+                                    type="text"
+                                    placeholder="Поиск"
+                                    id="livesearch"
+                                />
                             </form>
                         </div>
 
