--- a/css/places.html
+++ b/css/places.html
@@ -89,7 +89,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                     <div class="place-block">
@@ -114,7 +114,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                     <div class="place-block">
@@ -139,7 +139,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                     <div class="place-block">
@@ -164,7 +164,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                     <div class="place-block">
@@ -189,7 +189,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                     <div class="place-block">
@@ -214,7 +214,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                     <div class="place-block">
@@ -239,7 +239,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                     <div class="place-block">
@@ -264,7 +264,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                     <div class="place-block">
@@ -289,7 +289,7 @@
                             >
                         </div>
                         <div class="place-button">
-                            <button class="btn-order">Читать</button>
+                            <button class="btn-order">Заказать</button>
                         </div>
                     </div>
                 </div>
