add adaptability to popup register
 add adaptability to popup register

--- a/css/news.html
+++ b/css/news.html
@@ -44,7 +44,15 @@
                             >
                         </li>
                         <li><a class="bordleft" href="#">Профиль</a></li>
-                        <li><a class="bordleft" href="#">Регистрация</a></li>
+                        <li>
+                            <a
+                                href="#popup-register"
+                                id="register"
+                                class="bordleft"
+                                href="#"
+                                >Регистрация</a
+                            >
+                        </li>
                     </ul>
                     <span class="toggle">☰</span>
                 </label>
@@ -424,6 +432,106 @@
                                 хозяйственные мелочи - книги и грампластинки
                                 <br />- детские игрушки, одежда и обувь.
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="popup-register" class="popup">
+                <a href="#" class="popup__area"></a>
+                <div class="popup__body">
+                    <div class="popup__content__register">
+                        <div class="popup__text__register">
+                            <form
+                                class="form-register"
+                                action="check.php"
+                                method="POST"
+                            >
+                                <a
+                                    href="#register"
+                                    class="popup__close__register"
+                                    ><i class="far fa-times-circle"></i
+                                ></a>
+                                <h2 class="reg-h2">Регистрация</h2>
+                                <div class="form-field multi-input">
+                                    <label for="name">Представьтесь: </label>
+                                    <input
+                                        class="reg-input"
+                                        type="text"
+                                        name="name"
+                                        id="name"
+                                        placeholder="Имя и Фамилия "
+                                    />
+                                </div>
+                                <div class="form-field input-right">
+                                    <label for="mail">E-mail</label>
+                                    <input
+                                        class="reg-input"
+                                        type="text"
+                                        name="mail"
+                                        id="mail"
+                                        placeholder="Пример: email@gmail.com"
+                                    />
+                                </div>
+
+                                <div class="form-field input-right">
+                                    <label for="sex">Ваш пол</label>
+                                    <select
+                                        name="sex"
+                                        id="sex"
+                                        class="reg-input reg-pass"
+                                        required
+                                    >
+                                        <option>Мужcкой</option>
+                                        <option>Женский</option>
+                                    </select>
+                                </div>
+
+                                <div class="form-field input-right">
+                                    <label for="age">Сколько Вам лет?</label>
+                                    <select
+                                        name="age"
+                                        id="age"
+                                        class="reg-input reg-pass"
+                                        required
+                                    >
+                                        <option selected disabled hidden>
+                                            Укажите ваш возраст
+                                        </option>
+                                        <option>Мне менее 18 лет</option>
+                                    </select>
+                                </div>
+                                <script>
+                                    const select = document.querySelector(
+                                        "#age"
+                                    );
+
+                                    for (let i = 18; i <= 100; i++) {
+                                        const option = document.createElement(
+                                            "option"
+                                        );
+                                        option.textContent = option.value = i;
+                                        select.append(option);
+                                    }
+                                </script>
+
+                                <div class="form-field input-right">
+                                    <label for="pass">Пароль</label>
+                                    <input
+                                        class="reg-input reg-pass"
+                                        type="password"
+                                        name="pass"
+                                        id="pass"
+                                        placeholder="Введите пароль"
+                                    />
+                                </div>
+                                <div class="form-field submit-field">
+                                    <input
+                                        class="reg-input"
+                                        type="submit"
+                                        value="Зарегистрироваться"
+                                    />
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
